# py-dada2

./: .gitignore  README.md  pyproject.toml
examples/: _build_notebooks.py  tutorial_paired_miseq.ipynb  tutorial_quickstart.ipynb  tutorial_vs_R.ipynb
pydada2/: __init__.py  _subs.py  align.py  chimeras.py  dada.py  errors.py  filter.py  io.py  kmers.py  opts.py  paired.py  seqtab.py  taxonomy.py
tests/: r_reference.R  r_reference_full.R  test_r_parity.py  test_r_parity_full.py  test_smoke.py
